# alphaswarm-sol

./: .dockerignore  .env.example  .gitignore  .run  CLAUDE.md  Dockerfile  Dockerfile.agent  README.md  docker-compose.yml  llms-full.txt  llms.txt  mkdocs.yml  nav.md  pyproject.toml
.claude/: settings.json  settings.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TESTING-INDEX.md  TOOLING.md  config.json
benchmarks/: LABELING.md  RESEARCH_NOTES.md  TIER_STRATEGY.md  baseline.json  confidence_bounds.json  detection_baseline.json  pattern_baseline.json
configs/: audit_schema.json  claude_code_controller_markers.yaml  debug_mode_defaults.yaml  debug_mode_matrix.yaml  fresh_env_matrix.yaml  gate_runner.yaml  gauntlet_scoring.yaml  governance_policies.yaml  ground_truth_manifest.yaml  incident_playbooks.yaml  run_seed_manifest.yaml  skill_tool_policies.yaml  slo_definitions.yaml  user_journey_metrics.yaml  worktree_snapshot_policy.yaml
corpus/: ground_truth_markers.yaml
docs/: DOC-INDEX.md  LIMITATIONS.md  PHILOSOPHY.md  architecture.md  claude-code-architecture.md  index.md  x-baseline-audit.json
reports/: gauntlet_access_oracle.md  gauntlet_mutation.md  gauntlet_reentrancy.md  ground_truth_coverage.md  user_journey_happy.md  user_journey_metrics.md  user_journey_recovery.md  user_journey_run_20260131-005328.md  variance_report.md
schemas/: alphaswarm-codex-output.json  graph_interface_v2.json  llm_response.json  pattern_context_pack_v2.json  secure_reviewer_output.json  skill_registry_v1.json  skill_schema_v2.json  skill_tool_policy_v1.json
scripts/: aggregate_metrics.py  alphaswarm_crawl.py  analyze_by_subtype.py  analyze_smartbugs_results.py  analyze_testing_imports.py  audit_discovery_queries.yaml  audit_pattern_names.py  benchmark.py  build_ga_dossier.py  capture_baseline.py  check_wave_gate.py  collect_ab_metrics.py  compare_findings.py  compute_sss.py  corpus_coverage.py  corpus_ingest.py  counterfactual_factory.py  (+67 more)
(+4782 files in other folders)
